# paperchat

./: .gitignore  LICENSE  README.md  pyproject.toml
src/paperchat/: __init__.py  answer.py  chunk.py  citations.py  cli.py  extract.py  index_store.py
tests/: test_chunk.py  test_citations.py  test_extract.py  test_index_store.py
