[project]
name = "paperchat"
version = "0.1.0"
description = "Chat with technical PDFs using local embeddings and the Claude API."
requires-python = ">=3.10"
dependencies = [
    "pypdf",
    "sentence-transformers",
    "chromadb",
    "anthropic",
    "typer",
    "rich",
    "python-dotenv",
]

[project.scripts]
paperchat = "paperchat.cli:app"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"